<resources>
    <string name="app_name">Driver Tech</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_layout_login">Đăng nhập</string>
    <string name="title_layout_register">Đăng ký</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="notification">Thông báo</string>
    <string name="goto_settings">Vào cài đặt</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="no_internet_connection">Không có kết nối mạng\n</string>
    <string name="network_failure">Lỗi kết nối mạng</string>
    <string name="conversion_error">Lỗi gọi dữ liệu</string>
    <string name="total_product">Mặt hàng</string>
    <string name="time">Thời gian</string>
    <string name="store">Cửa hàng</string>
    <string name="address">Địa chỉ</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="accept">Chấp nhận</string>
    <string name="status_receiver">Giao hàng thu tiền</string>
    <string name="detail_order">Chi tiết các đơn hàng</string>
    <string name="order_id">Mã đơn: </string>
    <string name="status_order">Đang giao</string>
    <string name="detail_store">Chi tiết cửa hàng</string>
    <string name="call">Gọi</string>
    <string name="direction">Điều hướng</string>
    <string name="detail_client">Chi tiết khách hàng</string>
    <string name="client">Khách hàng</string>
    <string name="product">Sản phẩm</string>
    <string name="description">Mô tả</string>
    <string name="amount">Số lượng</string>
    <string name="price">Giá tiền</string>
    <string name="_0">0</string>
    <string name="detail_product">Chi tiết sản phẩm</string>
    <string name="total_order_today">Số đơn hôm nay</string>
    <string name="click_to_detail">Bấm xem chi tiết</string>
    <string name="amount_receiver">Số tiền nhận được</string>
    <string name="order_complete">Đơn hoàn thành</string>
    <string name="order_cancel">Đơn hủy bỏ</string>
    <string name="space">Khoảng cách</string>
    <string name="order_generated">Đơn phát sinh</string>
    <string name="on_going_order">Đang giao</string>
    <string name="completed_order">Đã giao</string>
    <string name="cancel_order">Đã hủy</string>
    <string name="facebook_app_id">2148322048972751</string>
    <string name="fb_login_protocol_scheme">fb2148322048972751</string>
    <string name="facebook_client_token">56789</string>
    <string name="name">Họ tên</string>
    <string name="phone">+84 xx xxx xxx</string>
    <string name="email">Email</string>
    <string name="delete_account">Xóa tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="fullname">Họ tên</string>
    <string name="tv_bottom_login1">Bạn đã có tài khoản?</string>
    <string name="tv_bottom_login2">Đăng ký ngay</string>
    <string name="login">Đăng nhập</string>
    <string name="account">Tài khoản</string>
    <string name="edit_account">Thay đổi thông tin</string>
    <string name="darkmode">Chế độ tối</string>
    <string name="languages">Ngôn ngữ</string>
    <string name="setting">Cài đặt</string>
    <string name="vietnamese">Việt Nam</string>
    <string name="ready">Sẵn sàng</string>
    <string name="send">Gửi</string>
    <string name="resend_otp">Gửi lại mã xác thực</string>
    <string name="content_forgot_password">Mã xác thưc sẽ được gửi đến email\nVui lòng kiểm tra tin nhắn trong hôp thư</string>
    <string name="edit_info">Cập nhật thông tin</string>
    <string name="phone_input">Nhập số điện thoại</string>
    <string name="_84">+84</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_order">Đơn đặt</string>
    <string name="nav_mailbox">Hộp thư</string>
    <string name="nav_user">Người dùng</string>
    <string name="message">Tin nhắn</string>
    <string name="title">Tiêu đề</string>
</resources>