<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.password.ForgotPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:textSize="@dimen/_20sp"
            android:layout_marginBottom="@dimen/_8dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_forgot_password"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="@dimen/_16dp"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signIn_edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg1"
            android:hint="@string/email"
            android:padding="15dp"
            android:layout_marginBottom="@dimen/_16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resend_otp"
            android:textStyle="bold"
            android:textSize="13sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:enabled="false"
            android:background="@drawable/bg"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>
</FrameLayout>