<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.account.login.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gray"
        android:padding="5dp"
        >
        <ImageView
            android:id="@+id/signIn_iconBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/baseline_keyboard_arrow_left_24"
            android:layout_margin="10dp"
            android:background="@drawable/bg1"/>
        <ImageView
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_100dp"
            android:src="@drawable/delivery"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/title_layout_login"
            android:textSize="25sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/signIn_edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:background="@drawable/bg5"
            android:hint="@string/email"
            android:padding="@dimen/_10dp"
            />
        <EditText
            android:id="@+id/signIn_edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5dp"
            android:background="@drawable/bg5"
            android:hint="@string/password"
            android:padding="@dimen/_10dp"
            android:inputType="textPassword"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signIn_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/green"
            android:background="@drawable/bg"
            android:textStyle="bold"
            android:text="@string/login"/>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

</FrameLayout>