<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.account.register.SignUpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/gray"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/baseline_keyboard_arrow_left_24"
                android:layout_margin="10dp"
                android:background="@drawable/bg1"/>
            <ImageView
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_100dp"
                android:src="@drawable/delivery"
                android:layout_margin="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/title_layout_register"
                android:textSize="25sp"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/edFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg1"
                android:hint="@string/fullname"
                android:padding="15dp" />
            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg1"
                android:hint="@string/email"
                android:padding="15dp" />
            <EditText
                android:id="@+id/edPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg1"
                android:hint="@string/phone"
                android:padding="15dp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_margin="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg1"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/forgot_password"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/green"
                android:background="@drawable/bg"
                android:textStyle="bold"
                android:text="Đăng ký"/>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>