<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_16dp"
    app:cardCornerRadius="@dimen/_16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_10dp"
        android:gravity="center_vertical"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_35dp"
            android:layout_height="@dimen/_35dp"
            android:src="@drawable/icon_user"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_10dp"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/_0"
            android:background="@drawable/bg"
            android:padding="@dimen/_5dp"
            android:textColor="@color/white"
            android:layout_marginEnd="@dimen/_5dp"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>