<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.order.detail.DetailOrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/detail_order"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/orderId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/order_id"
                />
            <TextView
                android:id="@+id/receiptStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/status_order"
                android:textAlignment="textEnd"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/total_product"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/status_receiver"
                android:textAlignment="textEnd"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/detail_store"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageStore"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    >
                    <TextView
                        android:id="@+id/tvStore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/store"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvAddressStore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textStyle="bold"
                        android:textColor="#6E7C78"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <LinearLayout
                    android:id="@+id/callStore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/icon_call"
                        android:layout_margin="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/call"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:textColor="#218a47"
                        android:textSize="16sp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/directionStore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/icon_direction"
                        android:layout_margin="5dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/direction"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:textColor="#6E7C78"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/detail_client"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageClient"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    >
                    <TextView
                        android:id="@+id/tvClient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/client"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvAddressClient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textStyle="bold"
                        android:textColor="#6E7C78"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <LinearLayout
                    android:id="@+id/callClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/icon_call"
                        android:layout_margin="5dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/call"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:textColor="#218a47"
                        android:textSize="16sp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/directionClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/icon_direction"
                        android:layout_margin="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/direction"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:textColor="#6E7C78"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/detail_product"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_detail_product"
                tools:itemCount="2"
                />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pgBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
</FrameLayout>