<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            >
            <TextView
                android:id="@+id/orderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/order_id"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textStyle="bold"
                tools:text="@string/time"
                android:layout_below="@id/orderId"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:maxWidth="100dp"
                android:src="@mipmap/ic_launcher"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textStyle="bold"
                tools:text="@string/client"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textStyle="bold"
                tools:text="@string/space"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="35dp"
                android:layout_margin="5dp"
                android:src="@drawable/icon_call" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg"
                android:textStyle="bold"
                android:padding="5dp"
                android:textColor="@color/white"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>